[master] chore: Fix formatting in mise.toml for consistency

--- a/mise.toml
+++ b/mise.toml
@@ -3,6 +3,11 @@ _.python.venv = { path = ".venv", create = true }
 
 [tasks.format]
 run = [
-    'black leetcode/**/*.py',
-    'black daily-interview-pro/**/*.py',
+  'black leetcode/**/*.py',
+  'black daily-interview-pro/**/*.py',
+]
+
+[tasks.setup]
+run = [
+  'pip install -r requirements.txt',
 ]
