[master] chore: Update format task to target specific Python files in leetcode directory

--- a/mise.toml
+++ b/mise.toml
@@ -3,7 +3,7 @@ _.python.venv = { path = ".venv", create = true }
 
 [tasks.format]
 run = [
-  'black leetcode/**/*.py',
+  'black leetcode/*.py',
   'black daily-interview-pro/**/*.py',
 ]
 
